--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,14 @@ body{
     margin: 0;
     padding: 0;
     background-color: #edede9;
+
+    
+    background-image: url(../imgs/les-jardins-et-le-chateau-du-touvet-photo-frederick-pattou.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
 }
 /* .collapse{
     display: flex;
