--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body{
     background-color: #edede9;
 
     
-    background-image: url(../imgs/les-jardins-et-le-chateau-du-touvet-photo-frederick-pattou.jpg);
+    background-image: url(../imgs/escalierRouge.avif);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
